# SockTunnel

./: CMakeLists.txt  README.md
src/: main.cpp  resources.cpp  resources.qrc
src/app/: SocksProxyApp.cpp  SocksProxyApp.h
src/core/: Logger.cpp  Logger.h  PublicIPChecker.cpp  PublicIPChecker.h  SshConfigParser.cpp  SshConfigParser.h  SshProxyManager.cpp  SshProxyManager.h  SystemProxyConfigurer.cpp  SystemProxyConfigurer.h
src/resources/: icon.icns  style.qss
src/ui/: CenterAlignDelegate.cpp  CenterAlignDelegate.h  SocksProxyUI.cpp  SocksProxyUI.h
